# raft

./: .clang-format  .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING  LICENSE  Makefile.am  README.md  README.rst  README_CH.md  acinclude.m4  amalgamation.json  configure.ac  raft.pc.in
.github/workflows/: build-and-test.yml  configure.yml  coverity.yml  downstream.yml  linting.yml  packages.yml  xarch.yml
benchmark/: os_disk_write.c
doc/: api.rst  conf.py  fsm.rst  index.rst  server.rst
doc/_themes/material/: globaltoc.html  layout.html  localtoc.html
doc/_themes/material/static/: fonts.css_t  material.css_t
docs/: api.rst  conf.py  disk-format.rst  getting-started.rst  index.rst  io.rst  server.rst
docs/_themes/material/: layout.html  page.html  search.html  theme.conf
example/: cluster.c  server.c
include/: raft.h  raft_uv.h
include/raft/: fixture.h  io_sim.h  io_stub.h  io_uv.h  uv.h
m4/: .gitignore
recovery/: downgrade_segment_format.c
src/: aio.c  aio.h  array.h  assert.h  binary.h  byte.c  byte.h  callbacks.h  checksum.c  checksum.h  client.c  compress.c  compress.h  configuration.c  configuration.h  context.c  context.h  convert.c  convert.h  election.c  election.h  encoding.c  entry.c  entry.h  err.c  err.h  error.c  error.h  fixture.c  flags.h  heap.c  heap.h  heartbeat.c  heartbeat.h  io.c  io.h  io_queue.c  io_queue.h  io_sim.c  io_stub.c  (+136 more)
test/benchmark/: main_os.c  main_uv.c  test_os_write.c  test_uv_disk.c  test_uv_file.c
test/fuzzy/: test_election.c  test_liveness.c  test_membership.c  test_replication.c
test/integration/: append_helpers.h  main.c  main_core.c  test_apply.c  test_assign.c  test_barrier.c  test_bootstrap.c  test_demote.c  test_digest.c  test_election.c  test_fixture.c  test_heap.c  test_init.c  test_liveness.c  test_membership.c  test_promote.c  test_recover.c  test_replication.c  test_snapshot.c  test_start.c  test_strerror.c  test_tick.c  test_transfer.c  test_transfer_leadership.c  test_uv_append.c  test_uv_bootstrap.c  test_uv_init.c  test_uv_load.c  test_uv_recover.c  test_uv_recv.c  test_uv_send.c  test_uv_set_term.c  test_uv_snapshot_put.c  test_uv_tcp_connect.c  test_uv_tcp_listen.c  test_uv_truncate.c  test_uv_truncate_snapshot.c  test_uv_work.c
test/lib/: addrinfo.c  addrinfo.h  aio.c  aio.h  cluster.c  cluster.h  configuration.h  dir.c  dir.h  fault.c  fault.h  fs.c  fs.h  fs.sh  fsm.c  fsm.h  heap.c  heap.h  io.c  io.h  io_uv.c  io_uv.h  log.h  logger.c  logger.h  loop.h  munit.c  network.c  network.h  raft.c  raft.h  runner.h  snapshot.h  tcp.c  tcp.h  tracer.c  tracer.h  uv.c  uv.h  uv_.h
test/os/: main.c  test_fs.c  test_io.c  test_os.c  test_path.c
test/unit/: main.c  main_core.c  main_uv.c  test_apply.c  test_barrier.c  test_byte.c  test_checksum.c  test_client.c  test_compress.c  test_configuration.c  test_context.c  test_election.c  test_encoding.c  test_err.c  test_error.c  test_fixture.c  test_flags.c  test_heap.c  test_io.c  test_io_queue.c  test_io_sim.c  test_io_stub.c  test_io_uv.c  test_io_uv_append.c  test_io_uv_client.c  test_io_uv_closer.c  test_io_uv_encoding.c  test_io_uv_finalize.c  test_io_uv_fs.c  test_io_uv_load.c  test_io_uv_loader.c  test_io_uv_metadata.c  test_io_uv_prepare.c  test_io_uv_preparer.c  test_io_uv_rpc.c  test_io_uv_server.c  test_io_uv_snapshot.c  test_io_uv_store.c  test_io_uv_store_preparer.c  test_io_uv_tcp.c  (+38 more)
test/uv/: main.c  test_os.c  test_uv_file.c
สร้างทางแยกของโครงการนี้/: README.md
